===========================================================================
2008-06-03      version 0.11.4
===========================================================================
2008-06-03:	James Osborn
	Added --enable-underscores option for linking with blas/lapack.
	Correct for factor of 1/2 in creation of HISQ links.

2008-06-02:	James Osborn
	Added --enable-blas and --enable-lapack configure options which
	enable blas based CG and eigCG codes.
	Fixed memory leak in HISQ code.

===========================================================================
2008-06-02      version 0.11.3
	Added HISQ inverter by Alan Gray.
===========================================================================
2008-04-14      version 0.11.2
===========================================================================
2008-04-14:	James Osborn
	Now make sure QOP is initialized before using.

2008-04-12:	James Osborn
	Fix to clover term.

===========================================================================
2008-04-12      version 0.11.1
===========================================================================
2008-04-12:	James Osborn
	Fixed up clover term, should now be usable if passed in.

2008-04-08:	James Osborn
	Initial version of blas based CG, disabled for now.
	Now initializes asqtad inverter when options are set.

===========================================================================
2008-04-07      version 0.11.0
===========================================================================
2008-04-07:	James Osborn
	Udated to work with QDP 1.8.0.  Requires QDP version >= 1.8.0.

2007-12-06:	James Osborn
	Added eigCG routine, disabled for now.

===========================================================================
2007-11-17      version 0.10.1
===========================================================================
2007-11-09:	James Osborn
	Bug fixes for asqtad inverter.

===========================================================================