@@ -1,3 +1,6 @@
+2008-06-06:	James Osborn
+	Added linalg.h to Makefile.am.
+
 ===========================================================================
 2008-06-03      version 0.11.4
 ===========================================================================
